Minor tweaks to UI

--- a/app/templates/carrier/driver/all.html
+++ b/app/templates/carrier/driver/all.html
@@ -8,7 +8,7 @@
             </div>
     </div>#}
 
-    <div class="panel panel-default">
+{#    <div class="panel panel-default">
         <div class="panel-heading">
             <i class="clip-pie"></i>
             All Drivers
@@ -25,9 +25,9 @@
                     <i class="fa fa-times"></i>
                 </a>
             </div>
-        </div>
+        </div>#}
             <div class="table-responsive">
-                <table class="table table-bordered table-hover" id="sample-table-1">
+                <table class="table table-bordered table-hover table-striped table-condensed" id="sample-table-1">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -61,7 +61,6 @@
                     </tbody>
                 </table>
             </div>
-    </div>
 
 
     {% include "partials/main_javascripts.html" %}
