--- a/app/templates/load/all.html
+++ b/app/templates/load/all.html
@@ -8,13 +8,13 @@
             </div>
     </div>#}
 
-    <div class="panel panel-default">
+    <!--<div class="panel panel-default">
         <div class="panel-heading">
             <i class="clip-pie"></i>
             Load Board
-        </div>
+        </div>-->
             <div class="table-responsive">
-                <table class="table table-bordered table-hover" id="sample-table-1">
+                <table class="table table-bordered table-hover table-striped table-condensed" id="sample-table-1">
                     <thead>
                         <tr>
                             <th>Load ID</th>
@@ -47,7 +47,8 @@
                                 <td>
                                     {% if load.status == "Assigned" %}
                                         <a href="{{ url_for('loads.complete', load_id=load.id)}}" class="btn btn-primary btn-mini ">Complete</a>
-                                    {% elif load.status != "Complete" %}
+                                    {% endif %}
+                                    {% if load.status != "Load Complete" %}
                                         <a href="{{ url_for('loads.edit', load_id=load.id)}}" class="btn btn-primary btn-mini">Edit</a>
                                     
                                         <a href="{{ url_for('loads.delete', load_id=load.id)}}" class="btn btn-danger btn-mini delete" onclick="return confirm('Are you sure you want to delete this?')">Delete</a>
@@ -58,7 +59,7 @@
                     </tbody>
                 </table>
             </div>
-    </div>
+    <!--</div>-->
 
 {% include "partials/main_javascripts.html" %}
 
