--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -9,176 +9,172 @@
 	            		<div class="panel-heading">
 	                		Map
 	            		</div>
-	            		<div class="panel-body">
-		                	<div id="map-canvas" style="height: 400px; margin: 0; padding: 0;"></div>
-		                	<hr>
+	            		{% if load.lane.locations.count() > 0 %}
+		            		<div class="panel-body">
+			                	<div id="map-canvas" style="height: 400px; margin: 0; padding: 0;"></div>
+			                </div>
+			            {% endif %}
+	                	<table class="table table-striped table-hover table-condensed" id="sample-table-1">
+		                    <thead>
+		                        <tr>
+		                            <th>Stop #</th>
+		                            <th>Address</th>
+		                            <th>Arrival Date</th>
+		                            <th>Status</th>
+		                            <th>Actions</th>
+		                            <!--<th>Status</th>-->
+		                        </tr>
+		                    </thead>
+		                    <tbody>
+		                    	{% if load.lane.locations.count() < 1 %}
+		                    		<tr>
+		                    			<td colspan="5" class="text-center">No Location Information Saved</td>
+		                    		</tr>
+		                    	{% else %}
+		                        	{% for location in locations|sort(attribute="stop_number") %}
+			                            <tr>
+			                            	<!--<td><a href="#responsive-{{ loop.index }}" data-toggle="modal">View</a></td>-->
+			                            	<td>{{ loop.index }}</td>
+			                            	<td>{{ location.address.address1 }}<br />{{ location.address.city }}, {{ location.address.state }} {{ location.address.postal_code }}</td>
+			                            	<td>{{ location.arrival_date }}</td>
+			                            	<td>{{ location.status }}</td>
+			                            	<td><a href="{{ url_for('.edit_location', load_id=load.id, location_id=location.id) }}">Edit</a>/<a href="{{ url_for('.delete_location', load_id=load.id, location_id=location.id) }}">Delete</a>
+			                            	<!--<td>
+			                            		<input type="hidden" id="location_status-{{ loop.index }}-location_id" name="location_status-{{ loop.index }}-location_id" class="form-control" value="{{ location.id }}">
 
-			                	<table class="table table-bordered table-hover table-condensed" id="sample-table-1">
-				                    <thead>
-				                        <tr>
-				                            <th>Stop #</th>
-				                            <th>Address</th>
-				                            <th>Arrival Date</th>
-				                            <th>Status</th>
-				                            <th>Actions</th>
-				                            <!--<th>Status</th>-->
-				                        </tr>
-				                    </thead>
-				                    <tbody>
-				                        {% for location in locations|sort(attribute="stop_number") %}
-				                            <tr>
-				                            	<!--<td><a href="#responsive-{{ loop.index }}" data-toggle="modal">View</a></td>-->
-				                            	<td>{{ loop.index }}</td>
-				                            	<td>{{ location.address.address1 }}<br />{{ location.address.city }}, {{ location.address.state }} {{ location.address.postal_code }}</td>
-				                            	<td>{{ location.arrival_date }}</td>
-				                            	<td>{{ location.status }}</td>
-				                            	<td><a href="{{ url_for('.edit_location', load_id=load.id, location_id=location.id) }}">Edit</a>/<a href="{{ url_for('.delete_location', load_id=load.id, location_id=location.id) }}">Delete</a>
-				                            	<!--<td>
-				                            		<input type="hidden" id="location_status-{{ loop.index }}-location_id" name="location_status-{{ loop.index }}-location_id" class="form-control" value="{{ location.id }}">
-
-				                            		<select id="location_status-{{ loop.index }}-status" name="location_status-{{ loop.index }}-status" class="form-control location-type" value="">
-				                            			{% if location.status is none %}
-															<option value="Pending Arrival">Pending Arrival</option>
-														{% else %}
-															<option value="{{ location.status }}">{{ location.status }}</option>
-														{% endif %}
-														{% if location.status != "Arrived" %}
-															<option value="Arrived">Arrived</option>
-														{% endif %}
-														{% if location.status != "Loaded" %}
-															<option value="Loaded">Loaded</option>
-														{% endif %}
-														{% if location.status != "Departed" %}
-															<option value="Departed">Departed</option>
-														{% endif %}
-													</select>
-												</td>-->
-				                            </tr>
-				                        {% endfor %}
-				                    </tbody>
-				                </table>
-				                <!--<div class="form-group">
-									<div class="col-sm-5 col-sm-offset-7">
-										<button type="submit" class="btn btn-success btn-block">
-											Update Status <i class="fa fa-arrow-circle-right"></i>
-										</button>
-									</div>
-								</div>-->
-	                	</div>
+			                            		<select id="location_status-{{ loop.index }}-status" name="location_status-{{ loop.index }}-status" class="form-control location-type" value="">
+			                            			{% if location.status is none %}
+														<option value="Pending Arrival">Pending Arrival</option>
+													{% else %}
+														<option value="{{ location.status }}">{{ location.status }}</option>
+													{% endif %}
+													{% if location.status != "Arrived" %}
+														<option value="Arrived">Arrived</option>
+													{% endif %}
+													{% if location.status != "Loaded" %}
+														<option value="Loaded">Loaded</option>
+													{% endif %}
+													{% if location.status != "Departed" %}
+														<option value="Departed">Departed</option>
+													{% endif %}
+												</select>
+											</td>-->
+			                            </tr>
+			                        {% endfor %}
+			                    {% endif %}
+		                    </tbody>
+		                </table>
 	            	</div>
 	         	</div>
-	         	
-         			<div class="col-sm-6">
-		        		<div class="panel panel-default">
-		            		<div class="panel-heading">
-		                		Shipper
-		            		</div>
-		            		<table id="truck" class="table table-condensed">
-								<tbody>
-			           
-				                    	<tr>
-											<td><b>Name:</b></td>
-											<td>{{ load.shipper.name }}</td>
-										</tr>
-										<tr>
-											<td><b>Phone:</b></td>
-											<td>{{ load.shipper.phone }}</td>
-										</tr>
-										<tr>
-											<td><b>Email:</b></td>
-											<td>{{ load.shipper.email }}</td>
-										</tr>
-				                </tbody>
-							</table>
-	                	</div>
-	            	</div>
-	            	<div class="col-sm-6">
-		        		<div class="panel panel-default">
-		            		<div class="panel-heading">
-		                		Broker
-		            		</div>
-		            		<table id="truck" class="table table-condensed">
-								<tbody>
-			           
-				                    	<tr>
-											<td><b>Name:</b></td>
-											<td>{{ load.broker.name }}</td>
-										</tr>
-										<tr>
-											<td><b>Phone:</b></td>
-											<td>{{ load.broker.phone }}</td>
-										</tr>
-										<tr>
-											<td><b>Email:</b></td>
-											<td>{{ load.broker.email }}</td>
-										</tr>
-				                </tbody>
-							</table>
-	                	</div>
-	            	</div>
-	            	<div class="col-sm-6">
-		        		<div class="panel panel-default">
-		            		<div class="panel-heading">
-		                		{% if user.is_carrier() %}
-		                			Assigned Truck/Driver
-		                		{% else %}
-		                			Assigned Carrier
-		                		{% endif %}
-		            		</div>
-		            		<table id="truck" class="table table-condensed">
-								<tbody>
-			               			{% if not user.is_carrier() %}
-				                    	<tr>
-											<td><b>Carrier:</b></td>
-											<td>{{ load.carrier.company_name }}</td>
-										</tr>
-										<tr>
-											<td><b>Carrier Fee:</b></td>
-											<td>{{ load.carrier_cost }}</td>
-										</tr>
-				                    {% else %}
-				                    	<tr>
-											<td><b>Amount:</b></td>
-											<td>{{ load.carrier_cost }}</td>
-										</tr>
-			                		{% endif %}
-				                	{% if load.truck is not none %}
-					                    <tr>
-											<td><b>Truck:</b></td>
-											<td><a href="{{ url_for('trucks.view', truck_id=load.truck.id) }}">{{ load.truck.name }}</a></td>
-										</tr>
-										<tr>
-											<td><b>Driver:</b></td>
-											<td><a href="{{ url_for('drivers.view', driver_id=load.truck.driver.id) }}">{{ load.truck.driver.get_full_name() }}</a></td>
-										</tr>
-					                {% else %}
-					                	<tr>
-											<td><b>Truck:</b></td>
-											<td>To be assigned</td>
-										</tr>
-					               	{% endif %}
-				                </tbody>
-							</table>
-	                	</div>
-	            	</div>
-
-	            	{% if is_dispatch and load.truck is none %}
-						<div class="col-sm-6">
-			        		{#<div class="panel panel-default">
-			        			<div class="panel-heading">
-			                		Filter
-			            		</div>
-			            		<div class="panel-body">
-			       
-										Radius from origin - 50, 100, 150, 200, 250
-								</div>
-							</div>#}
-							<div class="panel panel-default">
+	         	<div class="col-sm-6">
+	         		<div class="row">
+	         			<div class="col-sm-12">
+			        		<div class="panel panel-default">
 			            		<div class="panel-heading">
-			                		Nearby Carriers
+			                		Shipper
 			            		</div>
-			            		<div class="panel-body">
-			            			<table class="table table-striped table-bordered">
+			            		<table id="truck" class="table table-condensed">
+									<tbody>
+				           
+					                    	<tr>
+												<td><b>Name:</b></td>
+												<td>{{ load.shipper.name }}</td>
+											</tr>
+											<tr>
+												<td><b>Phone:</b></td>
+												<td>{{ load.shipper.phone }}</td>
+											</tr>
+											<tr>
+												<td><b>Email:</b></td>
+												<td>{{ load.shipper.email }}</td>
+											</tr>
+					                </tbody>
+								</table>
+		                	</div>
+		            	</div>
+		            </div>
+		            <div class="row">
+		            	<div class="col-sm-12">
+			        		<div class="panel panel-default">
+			            		<div class="panel-heading">
+			                		Broker
+			            		</div>
+			            		<table id="truck" class="table table-condensed">
+									<tbody>
+				           
+					                    	<tr>
+												<td><b>Name:</b></td>
+												<td>{{ load.broker.name }}</td>
+											</tr>
+											<tr>
+												<td><b>Phone:</b></td>
+												<td>{{ load.broker.phone }}</td>
+											</tr>
+											<tr>
+												<td><b>Email:</b></td>
+												<td>{{ load.broker.email }}</td>
+											</tr>
+					                </tbody>
+								</table>
+		                	</div>
+		            	</div>
+		            </div>
+		            {% if load.truck is not none %}
+			            <div class="row">
+			            	<div class="col-sm-12">
+				        		<div class="panel panel-default">
+				            		<div class="panel-heading">
+				                		{% if user.is_carrier() %}
+				                			Assigned Truck/Driver
+				                		{% else %}
+				                			Assigned Carrier
+				                		{% endif %}
+				            		</div>
+				            		<table id="truck" class="table table-condensed">
+										<tbody>
+					               			{% if not user.is_carrier() %}
+						                    	<tr>
+													<td><b>Carrier:</b></td>
+													<td>{{ load.carrier.company_name }}</td>
+												</tr>
+												<tr>
+													<td><b>Carrier Fee:</b></td>
+													<td>{{ load.carrier_cost }}</td>
+												</tr>
+						                    {% else %}
+						                    	<tr>
+													<td><b>Amount:</b></td>
+													<td>{{ load.carrier_cost }}</td>
+												</tr>
+					                		{% endif %}
+						                	{% if load.truck is not none %}
+							                    <tr>
+													<td><b>Truck:</b></td>
+													<td><a href="{{ url_for('trucks.view', truck_id=load.truck.id) }}">{{ load.truck.name }}</a></td>
+												</tr>
+												<tr>
+													<td><b>Driver:</b></td>
+													<td><a href="{{ url_for('drivers.view', driver_id=load.truck.driver.id) }}">{{ load.truck.driver.get_full_name() }}</a></td>
+												</tr>
+							                {% else %}
+							                	<tr>
+													<td><b>Truck:</b></td>
+													<td>To be assigned</td>
+												</tr>
+							               	{% endif %}
+						                </tbody>
+									</table>
+			                	</div>
+			            	</div>
+			            </div>
+		        	{% else %}
+		        		<div class="row">
+							<div class="col-sm-12">
+								<div class="panel panel-default">
+				            		<div class="panel-heading">
+				                		Trucks
+				            		</div>
+			            			<table class="table table-striped table-condensed">
 			            				<thead>
 			            					<tr>
 			            						<th>Truck</th>
@@ -219,9 +215,9 @@
 				 							{% endif %}
 			 							</tbody>
 			            			</table>
-			                	</div>
-			            	</div>
-			         	</div>
+				            	</div>
+				         	</div>
+				        </div>
 	         		{% endif %}
 	            </div>
 		    </div>
