--- a/app/templates/static/500.html
+++ b/app/templates/static/500.html
@@ -113,6 +113,8 @@
 									It looks as though we've broken something on our system.
 									<br>
 									Don't panic, we are fixing it! Please come back in a while.
+									<br>
+									{{ error }}
 								</p>
 							</div>
 						</div>
