Javascript reordering & phone field mask

--- a/app/templates/base_map.html
+++ b/app/templates/base_map.html
@@ -91,6 +91,7 @@
     <!-- start: BODY -->
     <body class="login example1">
         {% block body %}{% endblock %}
+        {% include "partials/main_javascripts.html" %}
     </body>
     <!-- end: BODY -->
 </html>
