--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,7 @@
     <!-- start: BODY -->
     <body class="login example1">
         {% block body %}{% endblock %}
+        {% include "partials/main_javascripts.html" %}
     </body>
     <!-- end: BODY -->
 </html>
