--- a/app/templates/partials/main_javascripts.html
+++ b/app/templates/partials/main_javascripts.html
@@ -18,3 +18,34 @@
 <script src="{{ static('backend/plugins/jquery-cookie/jquery.cookie.js') }}"></script>
 <script src="{{ static('backend/plugins/bootstrap-colorpalette/js/bootstrap-colorpalette.js') }}"></script>
 <script src="{{ static('backend/js/main.js') }}"></script>
+<!-- end: MAIN JAVASCRIPTS -->
+{% if form is defined %}
+		<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
+		<script src="{{ static('backend/plugins/jquery-inputlimiter/jquery.inputlimiter.1.3.1.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/autosize/jquery.autosize.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/select2/select2.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/jquery.maskedinput/src/jquery.maskedinput.js') }}"></script>
+		<script src="{{ static('backend/plugins/jquery-maskmoney/jquery.maskMoney.js') }}"></script>
+		<script src="{{ static('backend/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js') }}"></script>
+		<!--<script src="{{ static('backend/plugins/bootstrap-timepicker/js/bootstrap-timepicker.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/bootstrap-daterangepicker/moment.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/bootstrap-daterangepicker/daterangepicker.js') }}"></script>
+		<script src="{{ static('backend/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js') }}"></script>
+		<script src="{{ static('backend/plugins/bootstrap-colorpicker/js/commits.js') }}"></script>
+		<script src="{{ static('backend/plugins/jQuery-Tags-Input/jquery.tagsinput.js') }}"></script>
+		<script src="{{ static('backend/plugins/bootstrap-fileupload/bootstrap-fileupload.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/summernote/build/summernote.min.js') }}"></script>
+		<script src="{{ static('backend/plugins/ckeditor/ckeditor.js') }}"></script>
+		<script src="{{ static('backend/plugins/ckeditor/adapters/jquery.js') }}"></script>-->
+		<script src="{{ static('backend/js/form-elements.js') }}"></script>
+		<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
+{% endif %}
+<script>
+	jQuery(document).ready(function() {
+		Main.init();
+		{% if form is defined %}
+		FormElements.init();
+			$('.input-mask-phone').mask("(999) 999-9999");
+		{% endif %}
+	});
+</script>
