--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -39,10 +39,10 @@
 								</a>--> </span>
 						</div>
 						<div class="form-actions">
-							<label for="remember" class="checkbox-inline">
+							<!--<label for="remember" class="checkbox-inline">
 								<input type="checkbox" class="grey remember" id="remember" name="remember">
 								Keep me signed in
-							</label>
+							</label>-->
 							<button type="submit" class="btn btn-bricky pull-right">
 								Login <i class="fa fa-arrow-circle-right"></i>
 							</button>
