--- a/app/templates/carrier/driver/edit.html
+++ b/app/templates/carrier/driver/edit.html
@@ -49,7 +49,7 @@
 					</div>
 					<div class="form-group">
 						<label class="col-sm-3 control-label">
-							Phone <small class="text-warning">(999) 999-9999</small>
+							Phone<span class="symbol required"></span> <small class="text-warning">(999) 999-9999</small>
 						</label>
 						<div class="col-sm-9">
 							{{ form.phone_number(class='input-mask-phone form-control') }}
