--- a/app/templates/load/edit.html
+++ b/app/templates/load/edit.html
@@ -33,7 +33,7 @@
 					          {% endfor %}
 									</label>
 									<div class="col-sm-7">
-										{{ form.shipper.phone(class="form-control", placeholder="Phone") }}
+										{{ form.shipper.phone(class="form-control input-mask-phone", placeholder="Phone") }}
 									</div>
 								</div>
 								<div class="form-group">
@@ -79,7 +79,7 @@
 					          {% endfor %}
 									</label>
 									<div class="col-sm-7">
-										{{ form.broker.phone(class="form-control", placeholder="Phone") }}
+										{{ form.broker.phone(class="form-control input-mask-phone", placeholder="Phone") }}
 									</div>
 								</div>
 								<div class="form-group">
