--- a/app/templates/load/location/create.html
+++ b/app/templates/load/location/create.html
@@ -94,7 +94,7 @@
 										Phone <span class="symbol required"></span>
 									</label>
 									<div class="col-sm-7">
-										{{ form.contact_phone(class="form-control", placeholder="Phone") }}
+										{{ form.contact_phone(class="form-control input-mask-phone", placeholder="Phone") }}
 									</div>
 								</div>
 								<div class="form-group">
