--- a/app/templates/carrier/all.html
+++ b/app/templates/carrier/all.html
@@ -11,83 +11,87 @@
         </div>#}
     </div>
     <div class="row-fluid">
-        <div class="span12">
-            <div class="box">
-                <div class="box-title">
-                    Active Trucks
+        <div class="col-sm-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Map
                 </div>
-                <div class="box-content nopadding">
-                    
-                    <table class="table table-striped table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Driver</th>
-                                <!--<th>Status</th>-->
-                                <th>Actions</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for truck in fleet.trucks %}
-                                <tr>
-                                    {% if truck.driver is none %}
-                                            <form name="assign" action="{{ url_for('fleet.assign') }}" method="post" class="form-horizontal">
-                                    {% endif %}
-                                    <td><a href="{{ url_for('trucks.view', truck_id=truck.id) }}">{{ truck.name }}</a></td>
-                                    <td>
-                                        {% if truck.driver is none %}
-                                                {{ form.hidden_tag() }}
-                                                {{ form.truck(value=truck.id, type='hidden') }}
-                                                {{ form.driver(class="form-control")}}
-                                                {% for error in form.driver.errors %}
-                                                <span style="color: red;">[{{ error }}]</span>
-                                            {% endfor %}
-                                        {% else %}
-                                            <a href="{{ url_for('drivers.view', driver_id=truck.driver.id)}}">{{ truck.driver.get_full_name() }}</a>
-                                        {% endif %}
-                                    </td>
-                                    
-                                    <td>
-                                        {% if truck.driver is none %}
-                                            <input type="submit" class="btn btn-success success" value="Assign Driver" />
-                                            </form>
-                                        {% else %}
-                                            <button type="button" onclick="location.href='{{ url_for('fleet.remove', driver_id=truck.driver.id)}}'" class="btn btn-error">Remove Driver</button>
-                                        {% endif %}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                <div class="panel-body">
+                    <div id="map-canvas" style="height: 400px; margin: 0; padding: 0;"></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="row-fluid">
-        <div class="span12">
-            <div class="box">
-                <div class="box-title">
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Trucks
+                </div>
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Driver</th>
+                            <!--<th>Status</th>-->
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for truck in fleet.trucks %}
+                            <tr>
+                                {% if truck.driver is none %}
+                                        <form name="assign" action="{{ url_for('fleet.assign') }}" method="post" class="form-horizontal">
+                                {% endif %}
+                                <td><a href="{{ url_for('trucks.view', truck_id=truck.id) }}">{{ truck.name }}</a></td>
+                                <td>
+                                    {% if truck.driver is none %}
+                                            {{ form.hidden_tag() }}
+                                            {{ form.truck(value=truck.id, type='hidden') }}
+                                            {{ form.driver(class="form-control")}}
+                                            {% for error in form.driver.errors %}
+                                            <span style="color: red;">[{{ error }}]</span>
+                                        {% endfor %}
+                                    {% else %}
+                                        <a href="{{ url_for('drivers.view', driver_id=truck.driver.id)}}">{{ truck.driver.get_full_name() }}</a>
+                                    {% endif %}
+                                </td>
+                                
+                                <td>
+                                    {% if truck.driver is none %}
+                                        <input type="submit" class="btn btn-success success" value="Assign Driver" />
+                                        </form>
+                                    {% else %}
+                                        <button type="button" onclick="location.href='{{ url_for('fleet.remove', driver_id=truck.driver.id)}}'" class="btn btn-danger">Remove Driver</button>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
                     Unnassigned Drivers
                 </div>
-                <div class="box-content nopadding">
-                    
-                    <table class="table table-striped table-bordered">
-                        <thead>
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Phone</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for driver in fleet.drivers if driver.truck is none %}
                             <tr>
-                                <th>Name</th>
-                                <th>Phone</th>
+                                <td><a href="{{ url_for('drivers.view', driver_id=driver.id) }}">{{ driver.first_name }} {{ driver.last_name }}</a></td>
+                                <td>{{ driver.get_phone_number() }}</td>
                             </tr>
-                        </thead>
-                        <tbody>
-                            {% for driver in fleet.drivers if driver.truck is none %}
-                                <tr>
-                                    <td><a href="{{ url_for('drivers.view', driver_id=driver.id) }}">{{ driver.first_name }} {{ driver.last_name }}</a></td>
-                                    <td>{{ driver.get_phone_number() }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
