--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -38,7 +38,7 @@
 			                            	<td>{{ location.address.address1 }}<br />{{ location.address.city }}, {{ location.address.state }} {{ location.address.postal_code }}</td>
 			                            	<td>{{ location.arrival_date }}</td>
 			                            	<td>{{ location.status }}</td>
-			                            	<td><a href="{{ url_for('.edit_location', load_id=load.id, location_id=location.id) }}">Edit</a>/<a href="{{ url_for('.delete_location', load_id=load.id, location_id=location.id) }}">Delete</a>
+			                            	<td><a href="{{ url_for('.edit_location', load_id=load.id, location_id=location.id) }}">Edit</a>&nbsp;&nbsp;&nbsp;<a href="{{ url_for('.delete_location', load_id=load.id, location_id=location.id) }}">Delete</a>
 			                            	<!--<td>
 			                            		<input type="hidden" id="location_status-{{ loop.index }}-location_id" name="location_status-{{ loop.index }}-location_id" class="form-control" value="{{ location.id }}">
 
@@ -235,10 +235,6 @@ function ping_driver(truckID) {
 }
 </script>
 
-
-
-
-{% include "partials/main_javascripts.html" %}
 
 {#<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>#}
   {#<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>#}
