moved JQuery to <head>

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,6 +40,7 @@
         <!-- end: MAIN CSS -->
         <!-- start: CSS REQUIRED FOR THIS PAGE ONLY -->
         <!-- end: CSS REQUIRED FOR THIS PAGE ONLY -->
+        <script src="{{ static('backend/plugins/jQuery-lib/2.0.3/jquery.min.js') }}"></script>
 
         
     </head>
