--- a/app/templates/base_view_truck.html
+++ b/app/templates/base_view_truck.html
@@ -94,6 +94,7 @@
 
 
         </script>
+        <script src="{{ static('backend/plugins/jQuery-lib/2.0.3/jquery.min.js') }}"></script>
 </head>
     <!-- end: HEAD -->
     <!-- start: BODY -->
