--- a/app/templates/base_view_fleet.html
+++ b/app/templates/base_view_fleet.html
@@ -76,6 +76,7 @@
 
 
         </script>
+        <script src="{{ static('backend/plugins/jQuery-lib/2.0.3/jquery.min.js') }}"></script>
 </head>
     <!-- end: HEAD -->
     <!-- start: BODY -->
